--- a/AutoLineColor/AutoLineColor.csproj
+++ b/AutoLineColor/AutoLineColor.csproj
@@ -53,11 +53,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoLineColorMod.cs" />
+    <Compile Include="Coloring\ColorFamily.cs" />
+    <Compile Include="Coloring\RandomColor.cs" />
     <Compile Include="ColorMonitor.cs" />
-    <Compile Include="ColorName.cs" />
-    <Compile Include="Helper.cs" />
+    <Compile Include="Configuration.cs" />
+    <Compile Include="Console.cs" />
+    <Compile Include="Naming\DistrictNamingStrategy.cs" />
+    <Compile Include="Coloring\IColorStrategy.cs" />
+    <Compile Include="Naming\INamingStrategy.cs" />
+    <Compile Include="Naming\NoNamingStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Coloring\RandomColorStrategy.cs" />
+    <Compile Include="Coloring\RandomHueStrategy.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir "%25LOCALAPPDATA%25\Colossal Order\Cities_Skylines\Addons\Mods\$(SolutionName)"
