--- a/AutoLineColor/AutoLineColor.csproj
+++ b/AutoLineColor/AutoLineColor.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Coloring\RandomColorStrategy.cs" />
     <Compile Include="Coloring\RandomHueStrategy.cs" />
+    <Compile Include="Coloring\CategorisedColor.cs" />
+    <Compile Include="Coloring\CategorisedColorStrategy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
