Add London-style Naming Strategy
This strategy names:
  Buses like: "9 Aldwych", "33 Elm Heights", "CH4 Local"
  Metro like: "Beech Line", "Elm & Oak Line", "Juliet Line"
  Trains like: "1X45 Westvalley", "2G42 Elm to Grove",
               "3J19 Sycamore Rail"

--- a/AutoLineColor/AutoLineColor.csproj
+++ b/AutoLineColor/AutoLineColor.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Coloring\RandomHueStrategy.cs" />
     <Compile Include="Coloring\CategorisedColor.cs" />
     <Compile Include="Coloring\CategorisedColorStrategy.cs" />
+    <Compile Include="Naming\LondonNamingStrategy.cs" />
+    <Compile Include="Naming\GenericNames.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
